apps/frontend-personal-space/manifest/base/service.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: frontend-personal-space
  name: frontend-personal-space
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: frontend-personal-space
