apps/frontend-personal-space/manifest/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend-personal-space
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: frontend-personal-space.spos.polytech.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  frontend-personal-space
                port:
                  number: 80
  tls:
    - hosts:
        - frontend-personal-space.spos.polytech.apoorva64.com
      secretName: frontend-personal-space.spos.polytech.apoorva64-tls
